# tuberculosis-detection

./: Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
notebooks/: capstone-2.ipynb
src/: predict.py  train.py
